--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.Controller</groupId>
-    <artifactId>StudyController</artifactId>
+    <artifactId>Project2</artifactId>
     <version>0.1</version>
     <packaging>jar</packaging>
 
